--- a/css/style.css
+++ b/css/style.css
@@ -890,54 +890,38 @@ body.mobile-nav-active #mobile-nav-toggle {
   color: #ccc;
 }
 /* gallery/portfolio*/
-.gallery_section {
-  background-color: #f9f8f7;
-}
-
-.gallery_section .heading_container {
-  margin-bottom: 30px;
-}
-
-.gallery_section .row {
-  -webkit-box-align: stretch;
-      -ms-flex-align: stretch;
-          align-items: stretch;
-}
-
 .gallery_section .img-box {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
+  align-items: center;
+  justify-content: center;
   overflow: hidden;
   position: relative;
+  height: 200px; /* Yüksekliği ayarlayabilirsiniz */
 }
 
 .gallery_section .img-box img {
-  min-width: 100%;
-  min-height: 100%;
+  width: 100%;
+  height: auto;
+  transition: transform 0.3s ease; /* Dönüş efekti */
+}
+
+.gallery_section .img-box:hover img {
+  transform: scale(1.1); /* Üzerine gelindiğinde büyüme efekti */
 }
 
 .gallery_section .img-box a {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
+  align-items: center;
+  justify-content: center;
   position: absolute;
   opacity: 0;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   width: 55px;
   height: 55px;
   border-radius: 100%;
   background-color: #e45441;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  -webkit-transition: opacity 0.2s;
+  transform: translate(-50%, -50%);
   transition: opacity 0.2s;
   color: #ffffff;
   font-size: 24px;
@@ -951,15 +935,12 @@ body.mobile-nav-active #mobile-nav-toggle {
   width: 100%;
   height: 100%;
   background: rgba(58, 63, 88, 0.85);
-  -webkit-transition: all 0.1s;
   transition: all 0.1s;
-  -webkit-transform: translateY(100%);
-          transform: translateY(100%);
+  transform: translateY(100%);
 }
 
 .gallery_section .img-box:hover::before {
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
+  transform: translateY(0);
 }
 
 .gallery_section .img-box:hover a {
@@ -967,12 +948,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .gallery_section .btn-box {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   margin-top: 45px;
 }
 
@@ -983,7 +960,6 @@ body.mobile-nav-active #mobile-nav-toggle {
   color: #ffffff;
   border-radius: 5px;
   border: 1px solid #e45441;
-  -webkit-transition: all .2s;
   transition: all .2s;
 }
 
